--- a/EACJ960215HCLSRN08/148.247.220.98/certificados/qr/qrCertificado5b71.html
+++ b/EACJ960215HCLSRN08/148.247.220.98/certificados/qr/qrCertificado5b71.html
@@ -81,14 +81,14 @@
                         <div class="row">
                             <div class="col-xs-4">Nombre (S):</div>
                             <div class="col-xs-8">
-                                Cari Noemi Padilla Aguero
+                                Juan Carlos Estrada de la Cruz
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-xs-4">CURP: </div>
                             <div class="col-xs-8">
-                                PAAC770630MCLDGR08
+                                EACJ960215HCLSRN08
                             </div>
                         </div>
 
@@ -139,14 +139,14 @@
                         <div class="row">
                             <div class="col-xs-4">Folio: </div>
                             <div class="col-xs-8">
-                                984e4372-6859-457c-b9ad-61d5882tr467
+                                974e4372-6859-457c-b7bd-61d58823
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-xs-4">Matricula: </div>
                             <div class="col-xs-8">
-                                D4647G06156
+                                E1801H04059
                             </div>
                         </div>
 
@@ -159,7 +159,7 @@
                         
                         <div>&nbsp;</div>
                         <div class="row">
-                                <p align="center"><a target="_blank" class="button" href="DOC-PAAC770630MCLDGR08.pdf">&nbsp; Certificado de Estudios &nbsp;</a> 
+                                <p align="center"><a target="_blank" class="button" href="DOC-EACJ960215HCLSRN08.pdf">&nbsp; Certificado de Estudios &nbsp;</a>
                             </div>
                             
                         <div>&nbsp;</div>
