--- a/PISA880109MCLCRN07/148.247.220.98/certificados/qr/qrCertificado5b71.html
+++ b/PISA880109MCLCRN07/148.247.220.98/certificados/qr/qrCertificado5b71.html
@@ -1,3 +1,4 @@
+<!-- INICIO DEL COMENTARIO
 <html>
 <head>
         <link  rel="icon"   href="../../resources/images/credencial/favicon.svg" type="image/png" />
@@ -209,6 +210,34 @@
                 </div>
             </div>
             <div class="col-lg-2"></div>
-        </div>
+        </div>        
     </body>
+    
+--> FIN DEL COMENTARIO    
+<html xmlns="http://www.google.com" lang="es">
+
+<head>
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=https://www.gob.mx/sep">
+
+
+<!-- ==================== Start epilogue ==================== -->
+		</td>
+		</tr>
+		</table>
+	</td>
+	</tr>
+	</table>
+</td>
+</tr>
+</table>
+
+<table width="76%" border="0" align="center" valign="bottom" cellspacing="0" cellpadding="0">
+	<tr>
+
+	</tr>
+</table>
+
+</body>
+
+</html>    
 </html>
