--- a/ROSL840524HVZDSS03/148.247.220.98/certificados/qr/qrCertificado5b71.html
+++ b/ROSL840524HVZDSS03/148.247.220.98/certificados/qr/qrCertificado5b71.html
@@ -131,7 +131,7 @@
                         <div class="row">
                             <div class="col-xs-4">Grado Acreditado: </div>
                             <div class="col-xs-8">
-                                T&eacute;cnico Bachiller en Electromec&aacute;nico
+                                T&eacute;cnico Bachiller en Mecatronica Industrial
                             </div>
                         </div>
 
@@ -139,7 +139,7 @@
                         <div class="row">
                             <div class="col-xs-4">Folio: </div>
                             <div class="col-xs-8">
-                                974B4372-6869-427c-b7bd-61d58423
+                                974B4372-6869-427c-b7bd-61d58426
                             </div>
                         </div>
 
