--- a/ROVC770408HCLDLR05/rodac-gob.mx/index.html
+++ b/ROVC770408HCLDLR05/rodac-gob.mx/index.html
@@ -93,6 +93,11 @@
                     <TD> Carlos Alberto Rodr&iacute;guez Vald&eacute;s</H6></TD>
                   </TR>
                   <TR>
+                  <TD>
+                    <td>&nbsp;</td>
+                    <TD>
+                  </TR>
+                  <TR>
                   <TD><h6>CURP: </TD><td>&nbsp;</td><TD> ROVC770408HCLDLR05</H6></TD>
                   </TR>
                   <TR>
