--- a/ROVC770408HCLDLR05/rodac-gob.mx/index.html
+++ b/ROVC770408HCLDLR05/rodac-gob.mx/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es_mx">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <META name="keyword" content="rodac, sep, oficial, preparatoria, validez, validacion, certificado,dgair">
   <meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Registro Oficial de Documentos Académicos y Certificación (RODAC)| SEP | RODAC |  Consulta Publica RODAC</title>
