--- a/ROVC770408HCLDLR05/rodac-gob.mx/index.html
+++ b/ROVC770408HCLDLR05/rodac-gob.mx/index.html
@@ -105,16 +105,41 @@
                   <TD><h6>CURP: </TD><td>&nbsp;</td><TD> ROVC770408HCLDLR05</H6></TD>
                   </TR>
                   <TR>
+                  <TD>
+                    <td>&nbsp;</td>
+                    <TD>
+                  </TR>
+                  <TR>
                   <TD><h6>Estado: </TD><td>&nbsp;</td><TD> Coahuila de Zaragoza</H6></TD>
+                  </TR>
+                  <TR>
+                  <TD>
+                    <td>&nbsp;</td>
+                    <TD>
                   </TR>
                   <TR>
                   <TD><h6>Institucion:  </TD><td>&nbsp;</td><TD> Centro de Estudios Tecnol&oacute;gicos Industrial y de Servicios No. 60</H6></TD>
                   </TR>
                   <TR>
+                  <TD>
+                    <td>&nbsp;</td>
+                    <TD>
+                  </TR>
+                  <TR>
                   <TD><h6>Carrera Cursada </TD><td>&nbsp;</td><TD> Bachillerato Tecnologico en Maquinas y Herramientas </H6></TD>
                   </TR>
                   <TR>
+                  <TD>
+                    <td>&nbsp;</td>
+                    <TD>
+                  </TR>
+                  <TR>
                   <TD><h6>Folio:  </TD><td>&nbsp;</td><TD> 74847374238954785774</H6></TD>
+                  </TR>
+                  <TR>
+                  <TD>
+                    <td>&nbsp;</td>
+                    <TD>
                   </TR>
                   <TR>
                   <TD><h6>Matricula:  </TD><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><TD> ACUERDO 131/1017</H6></TD>
