--- a/ROVC770408HCLDLR05/rodac-gob.mx/index.html
+++ b/ROVC770408HCLDLR05/rodac-gob.mx/index.html
@@ -118,7 +118,7 @@
                     <TD>
                   </TR>
                   <TR>
-                  <TD><h6>Institucion:  </TD><td>&nbsp;</td><TD> Centro de Estudios Tecnol&oacute;gicos Industrial y de Servicios No. 60</H6></TD>
+                  <TD><h6>Municipio:  </TD><td>&nbsp;</td><TD> Saltillo </H6></TD>
                   </TR>
                   <TR>
                   <TD>
@@ -126,7 +126,7 @@
                     <TD>
                   </TR>
                   <TR>
-                  <TD><h6>Carrera Cursada </TD><td>&nbsp;</td><TD> Bachillerato Tecnologico en Maquinas y Herramientas </H6></TD>
+                  <TD><h6>Instituci&oacute;n </TD><td>&nbsp;</td><TD> Centro de Estudios Tecnol&oacute;gicos Industrial y de Servicios No. 48 </H6></TD>
                   </TR>
                   <TR>
                   <TD>
@@ -134,7 +134,7 @@
                     <TD>
                   </TR>
                   <TR>
-                  <TD><h6>Folio:  </TD><td>&nbsp;</td><TD> 74847374238954785774</H6></TD>
+                  <TD><h6>Nivel Educativo:  </TD><td>&nbsp;</td><TD> Bachillerato Tecnol&oacute;gico en el Area F&iacute;sico-Matemático</H6></TD>
                   </TR>
                   <TR>
                   <TD>
@@ -142,7 +142,31 @@
                     <TD>
                   </TR>
                   <TR>
-                  <TD><h6>Matricula:  </TD><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><TD> ACUERDO 131/1017</H6></TD>
+                  <TD><h6>Grado Acreditado:  </TD><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><TD> Bachillerato Tecnico en Maquinas y Herramientas</H6></TD>
+                  </TR>
+                  <TR>
+                  <TD>
+                    <td>&nbsp;</td>
+                    <TD>
+                  </TR>
+                  <TR>
+                  <TD><h6>Folio:  </TD><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><TD> 974w4372-6869-427c-b7vd-61d58422</H6></TD>
+                  </TR>
+                  <TR>
+                  <TD>
+                    <td>&nbsp;</td>
+                    <TD>
+                  </TR>
+                  <TR>
+                  <TD><h6>Matricula:  </TD><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><TD> E1891H04055</H6></TD>
+                  </TR>
+                  <TR>
+                  <TD>
+                    <td>&nbsp;</td>
+                    <TD>
+                  </TR>
+                  <TR>
+                  <TD><h6>Estatus:  </TD><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><TD> Egresado</H6></TD>
                   </TR>
                   </table>
                   
