--- a/LEFP910929MCLNLR06S/148.247.220.98/certificados/qr/qrCertificado5b71.html
+++ b/LEFP910929MCLNLR06S/148.247.220.98/certificados/qr/qrCertificado5b71.html
@@ -88,7 +88,7 @@
                         <div class="row">
                             <div class="col-xs-4">CURP: </div>
                             <div class="col-xs-8">
-                                LEFP910929MCLNLR06S
+                                LEFP910929MCLNLR06
                             </div>
                         </div>
 
