--- a/LEFP910929MCLNLR06S/148.247.220.98/certificados/qr/qrCertificado5b71.html
+++ b/LEFP910929MCLNLR06S/148.247.220.98/certificados/qr/qrCertificado5b71.html
@@ -158,7 +158,7 @@
                         </div>
                         <div>&nbsp;</div>
                         <div class="row">
-                                <p align="center"><a target="_blank" class="button" href="DOC-LEFP910929MCLNLR06S.pdf">&nbsp; Certificado de Estudios &nbsp;</a> 
+                                <p align="center"><a target="_blank" class="button" href="DOC-LEFP910929MCLNLR06.pdf">&nbsp; Certificado de Estudios &nbsp;</a> 
                             </div>
                             
                         <div>&nbsp;</div>
